add a parameter to message receive for receiving messages already read
